samples/_failures_safe/1761393206_30c609_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_063c9c9e.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_063c9c9e.c:169:9: error: expected ‘,’ or ‘;’ at end of input
  169 |         TokenType op = parser->current.type
      |         ^~~~~~~~~
./samples/SAFE/__tmp_063c9c9e.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_063c9c9e.c:169:9: error: expected declaration or statement at end of input
